# ogham-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docker-build.yml  schema-smoke-test.yml
docs/: database-platform-comparison.md  embedding-provider-benchmarks.md  openapi.json
docs/internals/: hooks-cli.md  hooks.md
sql/: generate_dimension_migration.py  schema.sql  schema_postgres.sql  schema_selfhost_supabase.sql
sql/migrations/: 002_cognitive_scoring.sql  003_confidence_scoring.sql  004_embedding_gemma_switch.sql  005_hybrid_search.sql  006_batch_dedup.sql  007_set_based_batch_update.sql  008_memory_relationships.sql  009_graph_explorer.sql  010_impact_analysis.sql  011_graph_centrality_boost.sql  018_entity_overlap_boost.sql  019_tenant_isolation.sql  020_entity_graph_activation.sql  023_drop_hardcoded_halfvec_casts.sql  028_topic_summaries.sql  029_function_search_path.sql  030_topic_summaries_dim_agnostic.sql  036_entities_backfill.sql  037_revoke_rpc_anon.sql
sql/migrations/rollback/: DANGER_028_topic_summaries.sql  DANGER_030_topic_summaries_dim_agnostic.sql  DANGER_036_entities_backfill.sql  DANGER_037_revoke_rpc_anon.sql
src/ogham/: app.py  claude_ai_import.py  claude_code_import.py  cli.py  compression.py  config.py  database.py  embedding_cache.py  embeddings.py  entity_backfill.py  export_import.py  extraction.py  flow_control.py  graph.py  health.py  hooks.py  hooks_cli.py  hooks_config.yaml  hooks_install.py  http_health.py  init_wizard.py  lifecycle.py  llm.py  onnx_embedder.py  openapi.py  pricing.py  prompts.py  recompute.py  recompute_executor.py  retry.py  server.py  service.py  topic_summaries.py  wiki_lint.py
src/ogham/backends/: __init__.py  gateway.py  postgres.py  protocol.py  supabase.py
src/ogham/data/: loader.py
src/ogham/data/languages/: ar.yaml  de.yaml  en.yaml  es.yaml  fr.yaml  ga.yaml  hi.yaml  it.yaml  ja.yaml  ko.yaml  nl.yaml  pl.yaml  pt-br.yaml  pt.yaml  ru.yaml  tr.yaml  uk.yaml  zh.yaml
src/ogham/exporters/: __init__.py  obsidian.py
src/ogham/sql/: schema.sql  schema_postgres.sql  schema_selfhost_supabase.sql
src/ogham/sql/migrations/: 022_profile_health_stats.sql  026_memory_lifecycle_split.sql  028_topic_summaries.sql  028_topic_summaries_rollback.sql  031_wiki_rpc_functions.sql  032_topic_summaries_rls_policy.sql
src/ogham/tools/: memory.py  stats.py  wiki.py
tests/: conftest.py  test_audit_embedding_usage.py  test_backend_wiring.py  test_claude_ai_import.py  test_claude_code_import.py  test_cli.py  test_cli_rich_renderers.py  test_compile_wiki.py  test_compression.py  test_config.py  test_dashboard_tools.py  test_embedding_cache.py  test_enrichment.py  test_entity_backfill.py  test_export_import.py  test_extraction.py  test_hook_triggers_sweep.py  test_hooks.py  test_hooks_cli.py  test_hooks_enqueue.py  test_http_health.py  test_integration.py  test_lifecycle_parity.py  test_list_coercion.py  test_llm.py  test_loader.py  test_migration_025.py  test_migration_026.py  test_migration_028.py  test_migration_036.py  test_migration_integrity.py  test_obsidian_export.py  test_onnx_embedder.py  test_openapi.py  test_postgres_backend.py  test_postgres_batch_ingest.py  test_postgres_integration.py  test_prompts.py  test_recompute.py  test_recompute_executor.py  (+12 more)
