[project]
name = "ogham-mcp"
version = "0.7.0"
description = "Shared memory MCP server — persistent, searchable, cross-client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Kevin Burns" }]
keywords = ["mcp", "memory", "ai", "agents", "pgvector", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=2.14",
    "postgrest>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "ollama>=0.4",
    "openai>=1.0",
    "typer>=0.12",
    "stop-words>=2024.2.1",
    "parsedatetime>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.9"]
postgres = [
    "psycopg-pool>=3.1",
    "psycopg[binary]>=3.1",
]
mistral = ["mistralai>=1.0"]
voyage = ["voyageai>=0.3"]
all = ["mistralai>=1.0", "voyageai>=0.3", "psycopg-pool>=3.1", "psycopg[binary]>=3.1"]

[project.urls]
Homepage = "https://ogham-mcp.dev"
Documentation = "https://ogham-mcp.dev/docs/"
Repository = "https://github.com/ogham-mcp/ogham-mcp"
"Bug Tracker" = "https://github.com/ogham-mcp/ogham-mcp/issues"

[project.scripts]
ogham = "ogham.cli:main"
ogham-mcp = "ogham.cli:main"
ogham-serve = "ogham.server:main"

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit real Supabase + embedding provider (deselect with -m 'not integration')",
    "postgres_integration: tests that hit real Postgres (deselect with -m 'not postgres_integration')",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "S"]
# S608: SQL in postgres.py -- all parameterised queries, column names are internal
# S104: bind 0.0.0.0 in http_health.py -- intentional for Docker
ignore = ["S608", "S104", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
"benchmarks/**" = ["S"]
"extras/**" = ["S"]

[tool.hatch.build.targets.wheel]
packages = ["src/ogham"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
